# boatmcp

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  config.test.yaml  config.yaml  main.py  pyproject.toml
.cursor/: mcp.json
.github/workflows/: pull-request.yaml  release-please.yml
docs/: getting_started.md  prompt.md  todo.md
examples/go_web_app/: go.mod  main.go
examples/python_flask_app/: Dockerfile  app.py
src/boatmcp/: __init__.py  main.py
src/boatmcp/core/: __init__.py  analysis.py  config.py  file_reader.py  server.py  types.py
src/boatmcp/docker/: __init__.py  generator.py  schemas.py  tools.py
src/boatmcp/kubernetes/: __init__.py  deployer.py  generator.py  helm.py  minikube.py  schemas.py  tools.py
src/boatmcp/schemas/: __init__.py  docker.py  helm.py  repository.py
src/boatmcp/services/: __init__.py
src/boatmcp/services/docker/: __init__.py  dockerfile_generator.py  simple_dockerfile_generator.py
src/boatmcp/services/helm/: __init__.py  helm_deployer.py  helm_generator.py
src/boatmcp/services/repository/: __init__.py  analyzer.py  scanner.py
src/boatmcp/templates/dockerfile/: base.dockerfile.j2  generic.dockerfile.j2  go.dockerfile.j2  java.dockerfile.j2  node.dockerfile.j2  python.dockerfile.j2  rust.dockerfile.j2
src/boatmcp/templates/helm/: Chart.yaml.template  _helpers.tpl.template  deployment.yaml.template  service.yaml.template  values.yaml.template
src/boatmcp/tools/: __init__.py  docker_tools.py  helm_tools.py  minikube_tools.py
src/boatmcp/utils/: __init__.py  file_reader.py
src/boatmcp/workflows/: __init__.py  deployment.py  schemas.py  tools.py
src/nlpi/: __init__.py  main.py
src/nlpi/schemas/: __init__.py  docker.py
src/nlpi/services/: __init__.py
src/nlpi/services/docker/: __init__.py
src/nlpi/services/repository/: __init__.py  analyzer.py
tests/: __init__.py  conftest.py  test_config.py  test_dockerfile_generator.py  test_helm_generator.py  test_repository_analyzer.py  test_repository_scanner.py  test_workflows.py
tests/docker/: __init__.py  test_generator.py
tests/kubernetes/: __init__.py  test_helm.py  test_minikube.py
